apps/base/cliproxyapi/cliproxyapi.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cliproxyapi-system
  labels:
    networking.tinyrack.net/isolation: enabled
